--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 
     <img class="img" src="./guitar.png" ><p></p>
+    <img class="img" src="./guitar2.png" ><p></p>
+    <img class="img" src="./guitar3.png" ><p></p>
     </p><dd>
     <b>
     <img src="images/yellowsq.gif" alt="*" width="9" height="9"> 
